--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.1
   dio: ^5.4.2+1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
